--- a/roles/applications/tasks/main.yml
+++ b/roles/applications/tasks/main.yml
@@ -13,6 +13,7 @@
       - gnome-shell-extension-gsconnect-browsers
       - htop
       - neovim
+      - snapd
       - vim
       - virtualbox
       - code
