--- a/gnome.yml
+++ b/gnome.yml
@@ -3,16 +3,31 @@
   pre_tasks:
     - name: See if font is already installed
       register: font_installed
+      become: true
       stat:
         path: "/home/{{ ansible_user_id }}/.local/share/fonts/Microsoft/TrueType/Segoe UI/segoeui.ttf"
-    - name: install segoe-ui font
-      get_url: url=https://raw.githubusercontent.com/mrbvrz/segoe-ui-linux/master/install.sh dest=/tmp/install.sh mode=755
+    - name: create font dest dir
+      file:
+        path: /home/{{ ansible_user_id }}/.local/share/fonts/Microsoft/TrueType/Segoe UI/
+        state: directory
+        mode: u=rw,g=rw,o=rw
     - name: Execute the segoe-ui installer
-      shell: set -o pipefail yes | /tmp/install.sh
+      # become: true
+      shell: |
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeui.ttf?raw=true -O {{ dest_dir }}/segoeui.ttf > /dev/null 2>&1 # regular
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeuib.ttf?raw=true -O {{ dest_dir }}/segoeuib.ttf > /dev/null 2>&1 # bold
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeuii.ttf?raw=true -O {{ dest_dir }}/segoeuii.ttf > /dev/null 2>&1 # italic
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeuiz.ttf?raw=true -O {{ dest_dir }}/segoeuiz.ttf > /dev/null 2>&1 # bold italic
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeuil.ttf?raw=true -O {{ dest_dir }}/segoeuil.ttf > /dev/null 2>&1 # light
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/seguili.ttf?raw=true -O {{ dest_dir }}/seguili.ttf > /dev/null 2>&1 # light italic
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/segoeuisl.ttf?raw=true -O {{ dest_dir }}/segoeuisl.ttf > /dev/null 2>&1 # semilight
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/seguisli.ttf?raw=true -O {{ dest_dir }}/seguisli.ttf > /dev/null 2>&1 # semilight italic
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/seguisb.ttf?raw=true -O {{ dest_dir }}/seguisb.ttf > /dev/null 2>&1 # semibold
+        wget -q https://github.com/mrbvrz/segoe-ui/raw/master/font/seguisbi.ttf?raw=true -O {{ dest_dir }}/seguisbi.ttf > /dev/null 2>&1 # semibold italic
+        fc-cache -f {{ dest_dir }}
+      vars:
+        dest_dir: "/home/.local/share/fonts/Microsoft/TrueType/Segoe UI/"
       changed_when: false
-      when: not font_installed.stat.exists
-    - name: Remove the segoe-ui installer
-      file: path=/tmp/install.sh state=absent
       when: not font_installed.stat.exists
 
   roles:
