--- a/ssh.yml
+++ b/ssh.yml
@@ -2,26 +2,40 @@
 
   tasks:
     - name: Ensure .ssh directory exists.
-      become: true
+      become_user: root
       file:
-        dest: "/home/{{ lookup('env', 'USER') }}/.ssh"
+        dest: "{{ dest_key | dirname }}"
         mode: 0700
         state: directory
 
     - name: Install ssh key
+      become_user: root
       copy:
-        src: "files/id_ed25519"
-        dest: "/home/{{ ansible_user_id }}/.ssh/id_ed25519"
-        mode: 0644
+        src: "{{ source_key }}"
+        dest: "{{ dest_key }}"
+        mode: 0600
 
     - name: Install ssh pub key
+      become_user: root
       copy:
-        src: "files/id_ed25519.pub"
-        dest: "/home/{{ ansible_user_id }}/.ssh/id_ed25519.pub"
-        mode: 0644
+        src: "{{ source_key }}.pub"
+        dest: "{{ dest_key }}.pub"
+        mode: 0600
 
-    # - name: Set authorized key took from file
-    #   authorized_key:
-    #     user: "{{ lookup('env', 'USER') }}"
-    #     state: present
-    #     key: "/home/{{ ansible_user_id }}/.ssh/id_ed25519.pub"
+    - name: Set authorized key took from file
+      authorized_key:
+        user: "{{ lookup('env', 'USER') }}"
+        state: present
+        key: "{{ lookup('file', item) }}"
+      with_fileglob:
+        - "{{ lookup('env', 'HOME') }}/.ssh/id_ed25519.pub"
+
+    - name: start ssh agent
+      shell: eval $(ssh-agent)
+      changed_when: false
+
+    - name: Unlock SSH key
+      ansible.builtin.expect:
+        command: ssh-add {{ lookup('env', 'HOME') }}/.ssh/id_ed25519
+        responses:
+          passphrase: "{{ ssh_pass }}"
