remove antigen + 10pk role + added iridium and wildfly

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.log
 .vagrant
-roles/diodonfrost.p10k/
-roles/gantsign.antigen/
 roles/petermosmans.customize-gnome/
 roles/geerlingguy.nodejs/
+roles/gantsign.intellij
+files/*.zip
