--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,3 @@
-- src: gantsign.antigen
-- src: diodonfrost.p10k
 - src: petermosmans.customize-gnome
 - src: geerlingguy.nodejs
+- src: gantsign.intellij
