--- a/roles/wildfly/tasks/main.yml
+++ b/roles/wildfly/tasks/main.yml
@@ -5,6 +5,9 @@
     dest: "/tmp"
     creates: "/tmp/wildfly-{{ versie }}.0.0.Final"
 
+- name: Wildfly map aanmaken
+  file: path={{ lookup('env', 'HOME') }}/dev/wildfly state=directory
+
 - name: Copy unzipped wildfly naar normale wildfly map
   ansible.builtin.copy:
     src: "/tmp/wildfly-{{ versie }}.0.0.Final/"
@@ -28,28 +31,28 @@
 
 - name: Multitenant regel toevoegen
   ansible.builtin.lineinfile:
-    path: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
+    path: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
     insertbefore: '<property name="hibernate.types.print.banner" value="false"/>'
     line: '<property name="iridium/enable.multitenant" value="true"/>'
     state: present
 
 - name: Duointercepter regel uitzetten
   ansible.builtin.lineinfile:
-    path: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
+    path: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
     insertafter: '<bindings>'
     line: '<simple name="java:/iridium/DuoWijzigingInterceptor" value="false"/>'
     state: present
 
 - name: Copy standalones naar util
   ansible.builtin.copy:
-    src: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
-    dest: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}-util/standalone/configuration/standalone.xml"
+    src: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
+    dest: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}-util/standalone/configuration/standalone.xml"
     remote_src: yes
 
 - name: Copy standalone naar regressie
   ansible.builtin.copy:
-    src: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
-    dest: "{{ lookup('env', 'HOME') }}/dev/wildfly-{{ versie }}-util/standalone/configuration/standalone.xml"
+    src: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}/standalone/configuration/standalone.xml"
+    dest: "{{ lookup('env', 'HOME') }}/dev/wildfly/wildfly-{{ versie }}-util/standalone/configuration/standalone.xml"
     remote_src: yes
 
 - name: remove tmp unzip map
